--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <main>
     <h1 id="spring-array">spring-array</h1><p>Micro library for tweening arrays(or array of arrays). Built-in spring easing.
-Useful for animation svg paths.</p>
+Useful for animating svg paths.</p>
 <ul><li><a href=#usage>Usage</a></li><li><a href=#license>License</a></li></ul><h2 id="usage">Usage</h2><pre><code>import tween from &#39;spring-array&#39;;
 
 const from = [0, 0, [0, 0]];
